@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 
 import os
 import sys
@@ -9,16 +9,16 @@ def main(argv):
         cmd = argv[2]
         if 'renewing' != cmd:
             f1 = open(argv[1], 'a+')
-            f1.write('%s\n' % argv)
+            f1.write(f'{argv}\n')
             if 'MD_VERSION' in os.environ:
-                f1.write('MD_VERSION=%s\n' % (os.environ['MD_VERSION']))
+                f1.write(f'MD_VERSION={os.environ["MD_VERSION"]}\n')
             if 'MD_STORE' in os.environ:
-                f1.write('MD_STORE=%s\n' % (os.environ['MD_STORE']))
+                f1.write(f'MD_STORE={os.environ["MD_STORE"]}\n')
             f1.close()
         sys.stderr.write("done, all fine.\n")
         sys.exit(0)
     else:
-        sys.stderr.write("%s without arguments" % (argv[0]))
+        sys.stderr.write(f"{argv[0]} without arguments")
         sys.exit(7)
     
 
