@@ -1,11 +1,10 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 
 import sys
 
 
 def main(argv):
     if len(argv) > 1:
-        logfile = argv[1]
         msg = argv[2] if len(argv) > 2 else None
         # fail on later messaging stages, not the initial 'renewing' one.
         # we have test_901_030 that check that later stages are not invoked
